// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopMenu should be rendered with active link 1`] = `
<DocumentFragment>
  <div
    class="hidden sm:block sm:ml-6"
  >
    <div
      class="flex"
    >
      <span
        class="ml-4 px-3 py-2 text-sm font-medium leading-5 text-primary border-b-2 border-primary"
      >
        Inicio
      </span>
      <a
        class="ml-4 px-3 py-2 text-sm font-medium leading-5 text-primary border-b-2 border-transparent hover:border-primary"
        href="/groups"
      >
        Grupos
      </a>
      <a
        class="ml-4 px-3 py-2 text-sm font-medium leading-5 text-primary border-b-2 border-transparent hover:border-primary"
        href="/help"
      >
        Ayuda
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DesktopMenu should be rendered without active link 1`] = `
<DocumentFragment>
  <div
    class="hidden sm:block sm:ml-6"
  >
    <div
      class="flex"
    >
      <a
        class="ml-4 px-3 py-2 text-sm font-medium leading-5 text-primary border-b-2 border-transparent hover:border-primary"
        href="/"
      >
        Inicio
      </a>
      <a
        class="ml-4 px-3 py-2 text-sm font-medium leading-5 text-primary border-b-2 border-transparent hover:border-primary"
        href="/groups"
      >
        Grupos
      </a>
      <a
        class="ml-4 px-3 py-2 text-sm font-medium leading-5 text-primary border-b-2 border-transparent hover:border-primary"
        href="/help"
      >
        Ayuda
      </a>
    </div>
  </div>
</DocumentFragment>
`;
